[package]
name = "quiz_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
futures-util = "0.3.30"
gcp_auth = "0.10.0"
reqwest = { version = "0.11.23", features = ["json"] }
reqwest-eventsource = "0.5.0"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
base64 = "0.21.5"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
mongodb = "2.8.1"
bson = { version = "2", features = ["chrono-0_4"] }
